--- a/github/css/stylesheet.css
+++ b/github/css/stylesheet.css
@@ -223,11 +223,14 @@ table {
 
 th {
   font-weight: 500;
+  padding: 8px 20px;
+  text-align: left; 
 }
 
 td {
   border: 1px solid #ebebeb;
-  text-align: center; 
+  padding: 8px 8px 8px 20px;
+  text-align: left; 
   font-weight: 300;
 }
 
